Fix parallax on iOS

--- a/src/globalStyles.scss
+++ b/src/globalStyles.scss
@@ -14,6 +14,12 @@
   }
 }
 
+@supports (-webkit-touch-callout: none) {
+  .h-screen {
+    height: -webkit-fill-available;
+  }
+}
+
 /* Global styles */
 * {
   -webkit-font-smoothing: antialiased;
